# practical-zephyr

./: .gitignore  .pylintrc  Pipfile  builder.Dockerfile  makefile  readme.md  setup.sh
.github/workflows/: ci.yml
00_basics/: CMakeLists.txt  prj.conf  readme.md  tasks.py
00_basics/src/: main.c
00_empty/: .gitignore  CMakeLists.txt  prj.conf  readme.md
01_kconfig/: CMakeLists.txt  Kconfig  extra0.conf  extra1.conf  prj.conf  prj_release.conf  readme.md  tasks.py
01_kconfig/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840_release.conf
01_kconfig/src/: main.c  usr_fun.c  usr_fun.h
02_devicetree/: readme.md
02_devicetree/dts/bindings/: custom-cells-b.yaml
02_devicetree/dts/playground/: props-phandles.overlay
02_devicetree_basics/: CMakeLists.txt  prj.conf  readme.md  tasks.py
02_devicetree_basics/dts/playground/: props-basics.overlay  props-phandles.overlay
02_devicetree_basics/src/: main.c
02_devicetree_syntax/: readme.md
02_devicetree_syntax/dts/bindings/: custom-props-basics.yaml
02_devicetree_syntax/dts/playground/: props-basics.overlay  props-phandles.overlay
03_devicetree_semantics/: app.overlay  nrf52840dk_nrf52840.overlay  readme.md  tasks.py
03_devicetree_semantics/boards/: nrf52840dk_nrf52840.overlay
03_devicetree_semantics/dts/bindings/: custom-cells-a.yaml  custom-cells-b.yaml  custom-props-basics.yaml  custom-props-phandles.yaml
03_devicetree_semantics/dts/playground/: props-basics.overlay  props-phandles.overlay
03_devicetree_semantics/src/: main.c
04_devicetree_practice/: readme.md
04_practice/: prj.conf  readme.md  tasks.py
04_practice/boards/: nrf52840dk_nrf52840.overlay
04_practice/dts/bindings/: custom-cells-a.yaml
04_practice/src/: main.c
05_workspaces/: readme.md
